--- a/default/app.conf
+++ b/default/app.conf
@@ -7,9 +7,10 @@ is_configured = 0
 
 [ui]
 is_visible = 1
-label = change_to_your_app_name
+label = sample_splunk_app
 
 [launcher]
-author = PGATour
-description = ADD_DESCRIPTION
-version = 1.0
+author = 
+description = 
+version = 1.0.0
+
