--- a/default/app.conf
+++ b/default/app.conf
@@ -7,10 +7,10 @@ is_configured = 0
 
 [ui]
 is_visible = 1
-label = sample_splunk_app
+label = pga_sample_app
 
 [launcher]
-author = PGATour
+author = 
 description = 
 version = 1.0.0
 
